--- a/chamber/styles/home-small.css
+++ b/chamber/styles/home-small.css
@@ -3,19 +3,16 @@
   --color-primary: hsl(208, 50%, 90%);
   --color-secondary: hsl(208, 50%, 10%);
   --color-tertiary: hsl(268, 80%, 20%);
-  --color-accent: hsl(148, 80%, 20%);
+  --hero-overlay: hsla(0, 0%, 0%, 0.6);
 }
 
 :root.dark {
   --background: hsl(0, 0%, 7%);
   --surface: hsl(0, 0%, 7%);
   --primary: hsl(265, 100%, 80%);
-  --primary-variant: hsl(265, 100%, 35%);
-  --secondary: hsl(174, 100%, 43%);
   --on-background: hsl(0, 0%, 100%);
   --on-surface: hsl(0, 0%, 100%);
   --on-primary: hsl(0, 0%, 0%);
-  --on-secondary: hsl(0, 0%, 0%);
 }
 
 /* ===== GLOBAL ===== */
@@ -182,27 +179,28 @@ main h1 {
 .hero-img {
   display: block;
   width: 100%;
-  height: 250px;
+  height: auto;
   object-fit: cover;
 }
 
 .hero-message {
   position: absolute;
-  top: 1rem;
+  top: 0;
   left: 0;
   right: 0;
   text-align: center;
   z-index: 2;
   padding: 0.5rem 1rem;
   margin: 0 auto;
+  background-color: var(--hero-overlay);
   color: var(--color-primary);
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  max-width: 100%;
   transition: background-color 0.3s, backdrop-filter 0.3s;
 }
 
 .hero-message h2 {
   margin: 0;
-  font-size: 1.5rem;
+  font-size: 0.9rem;
   font-weight: bold;
 }
 
@@ -215,7 +213,7 @@ main h1 {
 
 .cta a {
   display: inline-block;
-  padding: 0.75rem 1rem;
+  padding: 0.5rem 0.75rem;
   background-color: var(--color-tertiary);
   color: var(--color-primary);
   text-decoration: none;
@@ -348,6 +346,7 @@ section.weather {
   color: var(--on-surface);
 }
 
+/* ===== SPOTLIGHTS ===== */
 section.spotlights {
   background: transparent !important;
   border: none !important;
